#762 closed bug (fixed)
[app_server] scroll focus lost until mouse moves
Reported by: | diver | Owned by: | axeld |
---|---|---|---|
Priority: | normal | Milestone: | R1 |
Component: | - General | Version: | |
Keywords: | Cc: | ||
Blocked By: | Blocking: | ||
Platform: | All |
Description
Launch any text file (which is large enough to have scrollbar) from tracker, so that mouse cursor will be above a text view. Try to scroll mouse wheel without moving a mouse - it won't work, until you actualy move your mouse.
Change History (10)
comment:1 by , 19 years ago
comment:2 by , 19 years ago
Component: | Kits → Servers |
---|
comment:3 by , 19 years ago
Changing component, or maybe it's an input_server bug, Axel?
You don't even have to set your mouse to be above text view (Team leaders) - just above AboutHaiku...
comment:4 by , 19 years ago
Summary: | [StyledEdit] text scroll doesn't work until mouse moves → [app_server] focus lost until mouse moves |
---|
comment:5 by , 19 years ago
Summary: | [app_server] focus lost until mouse moves → [app_server] scroll focus lost until mouse moves |
---|
comment:6 by , 19 years ago
app_server problems are solved in hrev18596. Remaining problems are in BView::GetMouse().
comment:7 by , 19 years ago
Status: | new → assigned |
---|
comment:8 by , 19 years ago
Resolution: | → fixed |
---|
comment:9 by , 19 years ago
Status: | assigned → closed |
---|
comment:10 by , 19 years ago
Note:
See TracTickets
for help on using tickets.
Or even better: Type in terminal AboutHaiku, so that after it opens your mouse will be above text view (Team leaders:) Try to scrol without mouse movement - you will scroll terminal, but focus is set to AboutHaiku.