Improved the fake mouse-moved mechanism quite a bit: * EventDispatcher now adopts the cursor position from the HWInterface upon   assignment, so that even the initial cursor reports match the on screen   visuals. * The message was never sent because "target" in Desktop::_SendFakeMouseMoved()   was never set. * EventDispatcher::SendFakeMouseMoved() now accepts an EventTarget and no   longer a BMessenger (fits better to the rest of the API). * EventDispatcher::SendFakeMouseMoved() now sends out the exit transit message   to the previous target directly (doesn't wait until the next actual mouse   move), and updates the previous target as well, so that scrolling now   works in that new window. * This only partially fixes bug #762, though, as GetMouse() can still steal   this mouse message (BTextViews do that in WindowActivated()).

git-svn-id: file:///srv/svn/repos/haiku/haiku/trunk@18596 a95241bf-73f2-0310-859d-f6bbb57e9c96